tests/neg/beanAccessorsLeaking/B_2.scala
class B(val a: A):
  def x = a.getX() // error